--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9ae9e">  <td>14/08/03 17:37:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EfTestHelp.open_ef_home_page()[pri:0, instance:testng.webdriver.framework.test.EfTestHelp@284a6c0]">open_ef_home_page</td> 
-  <td>main@1793066712</td>   <td></td> </tr>
-<tr bgcolor="a9ae9e">  <td>14/08/03 17:39:06</td>   <td>111836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EfTestHelp.tearDown()[pri:0, instance:testng.webdriver.framework.test.EfTestHelp@284a6c0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1793066712</td>   <td></td> </tr>
+<tr bgcolor="ee9e80">  <td>14/08/07 23:27:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EfTestHelp.open_ef_home_page()[pri:0, instance:testng.webdriver.framework.test.EfTestHelp@283a0f10]">open_ef_home_page</td> 
+  <td>main@359554878</td>   <td></td> </tr>
+<tr bgcolor="ee9e80">  <td>14/08/07 23:28:07</td>   <td>62724</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EfTestHelp.tearDown()[pri:0, instance:testng.webdriver.framework.test.EfTestHelp@283a0f10]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@359554878</td>   <td></td> </tr>
 </table>
